Removed temp secrets

--- a/Docker/.env
+++ b/Docker/.env
@@ -10,6 +10,6 @@ NEXT_PUBLIC_VIEWER_URL=http://localhost:8081
 # Admin login email
 ADMIN_EMAIL=khaled.shaalan.031@gmail.com
 
-GOOGLE_AUTH_CLIENT_ID=448484726243-103ksrtem001dc4lg2sjmiolp989050k.apps.googleusercontent.com
-GOOGLE_AUTH_CLIENT_SECRET=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
+GOOGLE_AUTH_CLIENT_ID=
+GOOGLE_AUTH_CLIENT_SECRET=
 # For more configuration options check out: https://docs.typebot.io/self-hosting/configuration
